--- a/style/style.scss
+++ b/style/style.scss
@@ -4,49 +4,87 @@
 @import "components/header";
 @import "components/footer";
 
-body {
-    background: orange;
+/*----------------------------------------
+    all sections
+----------------------------------------*/
+section {
+    margin-bottom: 50px;
 }
 
-.parent {
+.wrap--description {
+    width: 70%;
+}
+
+/*----------------------------------------
+    Section - hero
+----------------------------------------*/
+.hero {
+    background: url("../assets/hero.jpg"), linear-gradient(rgba(#fff, 0.5), rgba(#fff, 0.5));
+    min-height: 500px;
+    background-size: cover;
+    @include flexCenter(row);
+}
+
+.wrap--hero {
+    // align items in center
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include flexCenter(column);
+}
+
+
+/*----------------------------------------
+    Section - categories
+----------------------------------------*/
+.categories .wrapper {
+    @include flexCenter(column);
+}
+
+.wrap--categoriesDescription {
+    @include flexCenter(column);
+}
+
+.wrap--overlayText {
+    padding: 1rem;
+    background: #fff;
+}
+
+.layout__categories {
     display: grid;
-    // grid-template-areas: 
-    // "air air office house"
-    // "air air containers containers";
-    grid-gap: 20px;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    // grid-auto-rows: 1fr;
-    // grid-auto-columns: 1fr;
-
-}
-
-.child {
-    // width: 100px;
-    min-height: 100px;
-    background: blue;
-    border: 1px black solid;
-
 }
 
 .air {
-    // grid-area: air;
-    // grid-column-start: 1;
-    // // grid-column-end: span 2;
-    // grid-row-start: 1;
-    grid-row-end: span 2;
-    background: pink;
+    background: url(../assets/airPlants.jpg);
 }
 
-.office {
-    // grid-area: office;
-}
-.house {
-    // grid-area: house;
-}
 .containers {
-    // grid-area: containers;
-    background: green;
-    grid-column-start: span 2;
+background:linear-gradient(rgba(#fff,0.5),rgba(#fff,0.5)), url('../assets/plantContainers.jpg');
+width: 200px;
+height: 200px;
 }
 
+
+
+/*----------------------------------------
+    Section - hero
+----------------------------------------*/
+
+
+
+
+
+
+
+
+
+// button typography and styles
+button, input[type="submit"] {
+    border: none;
+    box-shadow: none;
+    text-transform: uppercase;
+}
+
+.btn__cta {
+    @include btn--large($pink, #fff);
+}
