--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -4,4 +4,10 @@ $text-gray: #888890;
 $text-font: "Poppins", sans-serif;
 // $display-font:
 
+
+
+//theme accent colors
+$light-gray: #f5efef;
 $pink: #f07f84;
+$blue: #79dad6;
+$beige: #f6b895;
