--- a/style/_mixin.scss
+++ b/style/_mixin.scss
@@ -6,8 +6,6 @@
     padding: 0.8rem;
 }
 
-
-
 @mixin btn--large($bgcolor, $textcolor) {
     background: $bgcolor;
     color: $textcolor;
@@ -20,4 +18,22 @@
     align-items: center;
     flex-direction: $dir;
     text-align: center;
+}
+
+@mixin setFont($size, $color, $weight) {
+    font-size: $size;
+    color: $color;
+    font-weight: $weight;
+}
+
+@mixin badge($bg) {
+    background: $bg;
+    @include setFont(1rem, #fff, 400);
+    padding: 0.2rem 0.8rem;
+    display: inline;
+    border-radius: 15px;
+    min-width: 45px;
+    text-transform: uppercase;
+    text-align: center;
+
 }
