--- a/style/components/_footer.scss
+++ b/style/components/_footer.scss
@@ -1,3 +1,31 @@
-footer {
 
+
+footer {
+    margin: 60px 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 30px;
+}
+
+.wrap--footerSection1 {
+    grid-column-end: span 5;
+}
+
+.wrap--footerSection2, .wrap--footerSection3 {
+    grid-column-end: span 2;
+}
+
+.wrap--footerSection4 {
+    grid-column-end: span 3;
+}
+
+.layout__footerInsta {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 10px;
+}
+
+footer .graphics--logo {
+    margin-bottom: 42px;
 }
