--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,141 @@
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
+  display: block; }
+
+audio, canvas, video {
+  display: inline-block; }
+
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+[hidden] {
+  display: none; }
+
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; }
+
+a:focus {
+  outline: thin dotted; }
+
+a:active, a:hover {
+  outline: 0; }
+
+h1 {
+  font-size: 2em; }
+
+abbr[title] {
+  border-bottom: 1px dotted; }
+
+b, strong {
+  font-weight: 700; }
+
+dfn {
+  font-style: italic; }
+
+mark {
+  background: #ff0;
+  color: #000; }
+
+code, kbd, pre, samp {
+  font-family: monospace, serif;
+  font-size: 1em; }
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word; }
+
+q {
+  quotes: \201C \201D \2018 \2019; }
+
+small {
+  font-size: 80%; }
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -.5em; }
+
+sub {
+  bottom: -.25em; }
+
+img {
+  border: 0; }
+
+svg:not(:root) {
+  overflow: hidden; }
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: .35em .625em .75em; }
+
+button, input, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0; }
+
+button, input {
+  line-height: normal; }
+
+button, html input[type=button], input[type=reset], input[type=submit] {
+  -webkit-appearance: button;
+  cursor: pointer; }
+
+button[disabled], input[disabled] {
+  cursor: default; }
+
+input[type=checkbox], input[type=radio] {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0; }
+
+input[type=search] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box; }
+
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+textarea {
+  overflow: auto;
+  vertical-align: top; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+body, figure {
+  margin: 0; }
+
+legend, button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: '';
+  clear: both;
+  height: 0; }
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+@font-face {
+  font-family: "PressStyle";
+  src: url("../assets/press_style/PressStyle.otf"); }
+
 body {
   font-family: "Poppins", sans-serif; }
 
@@ -14,31 +152,148 @@ h1, h2, h3, h4, h5, h6 {
 a:visited {
   color: black; }
 
+a {
+  text-decoration: none;
+  display: inline-block; }
+
+li {
+  list-style-type: none; }
+
 .heading--heroMain {
   font-size: 6rem;
+  color: #000;
   font-weight: 500;
   text-align: center; }
 
 .heading--heroSecondary {
   font-size: 3.2rem;
   color: #888890;
+  font-weight: 400;
   text-align: center; }
 
 .heading--section {
-  font-size: 3.6rem;
+  font-size: 3.5rem;
+  color: #000;
   font-weight: 500;
-  margin: 20px 0; }
+  margin: 20px 0;
+  text-align: center;
+  padding-bottom: 30px; }
 
-.text--regular, .text--author {
+.heading--categories {
+  font-size: 2.4rem;
+  color: #000;
+  font-weight: 400; }
+
+.heading--blogTitle {
+  font-size: 1.8rem;
+  color: #000;
+  font-weight: 500;
+  margin-bottom: 20px; }
+
+.heading--footer {
+  font-size: 2.4rem;
+  color: #000;
+  font-weight: 500;
+  margin-bottom: 30px; }
+
+.text--regular {
   font-size: 1.4rem;
   color: #888890;
-  line-height: 2; }
+  font-weight: 400;
+  line-height: 2;
+  margin-bottom: 20px; }
+
+.text--itemCount {
+  font-size: 1.6rem;
+  color: #888890;
+  font-weight: 400; }
 
 .text--author {
-  font-weight: 500; }
+  font-size: 1.4rem;
+  color: #888890;
+  font-weight: 500;
+  margin-top: 40px;
+  display: inline-block; }
   .text--author span {
     font-weight: 400;
     font-style: italic; }
+
+.text--bold {
+  font-weight: 500;
+  color: black; }
+
+.link {
+  font-size: 1.4rem;
+  color: #000;
+  font-weight: 400;
+  padding: 0.3rem 0; }
+  .link--sectionNav {
+    padding: 0.5rem 0;
+    margin: 0 3rem;
+    display: inline-block;
+    border-bottom: 1px solid transparent; }
+    .link--sectionNav:hover, .link--sectionNav:focus {
+      color: #f07f84;
+      border-bottom: 1px solid #000; }
+  .link--footer {
+    color: #888890;
+    display: inline-block; }
+
+.label--productName {
+  font-size: 1.4rem;
+  color: #000;
+  font-weight: 400; }
+
+.label--productPrice {
+  font-size: 1.8rem;
+  color: #000;
+  font-weight: 400; }
+
+.label--productPriceOld {
+  font-size: 1.4rem;
+  color: #888890;
+  font-weight: 400;
+  text-decoration: line-through; }
+
+blockquote {
+  font-size: 1.6rem;
+  color: #000;
+  font-weight: 400;
+  font-style: italic;
+  line-height: 2; }
+
+.display--graphic {
+  font-size: 8rem;
+  color: #fff;
+  font-weight: 400;
+  font-family: "PressStyle", sans-serif;
+  text-transform: uppercase; }
+
+.display--small {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.2em; }
+
+.underline--long::after {
+  content: "";
+  display: block;
+  width: 25px;
+  height: 3px;
+  background: #f5efef;
+  border-left: 25px #79dad6 solid;
+  border-right: 25px #79dad6 solid;
+  margin: 0 auto;
+  margin-top: 10px; }
+
+.underline--short::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #79dad6;
+  margin-top: 10px; }
 
 .wrapper {
   width: 80%;
@@ -53,25 +308,86 @@ header {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  margin: 30px 0; }
+
+header > div {
+  width: 33%;
+  float: left;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center; }
+
+footer {
+  margin: 60px 0;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 30px; }
+
+.wrap--footerSection1 {
+  grid-column-end: span 5; }
+
+.wrap--footerSection2, .wrap--footerSection3 {
+  grid-column-end: span 2; }
+
+.wrap--footerSection4 {
+  grid-column-end: span 3; }
+
+.layout__footerInsta {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 10px; }
+
+footer .graphics--logo {
+  margin-bottom: 42px; }
 
 /*----------------------------------------
     all sections
 ----------------------------------------*/
+.visuallyHidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
 section {
   margin-bottom: 50px; }
 
-.wrap--description {
-  width: 70%; }
+.wrap--small {
+  width: 70%;
+  margin: 0 auto 80px; }
+
+img {
+  width: 100%; }
 
 /*----------------------------------------
     Section - hero
 ----------------------------------------*/
 .hero {
-  background: url("../assets/hero.jpg"), -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0.5)));
-  background: url("../assets/hero.jpg"), -webkit-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
-  background: url("../assets/hero.jpg"), -o-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
-  background: url("../assets/hero.jpg"), linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5));
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.4)), to(rgba(255, 255, 255, 0.4))), url("../assets/hero.jpg");
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../assets/hero.jpg");
+  background: -o-linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../assets/hero.jpg");
+  background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../assets/hero.jpg");
   min-height: 500px;
   background-size: cover;
   display: -webkit-box;
@@ -94,6 +410,7 @@ section {
   text-align: center; }
 
 .wrap--hero {
+  margin: 50px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -105,9 +422,6 @@ section {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center;
-  display: flex;
-  justify-content: center;
   align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -159,27 +473,359 @@ section {
   flex-direction: column;
   text-align: center; }
 
+.btn__cart {
+  background: #fff;
+  color: #000;
+  padding: 0.8rem; }
+
 .wrap--overlayText {
-  padding: 1rem;
+  padding: 1rem 2rem;
   background: #fff; }
 
+.overlayArea {
+  position: relative;
+  line-height: 0; }
+
+.popularItem__overlay {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease; }
+
+.overlayArea:hover .popularItem__overlay {
+  visibility: visible;
+  opacity: 1; }
+
 .layout__categories {
-  display: grid; }
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  width: 100%;
+  -webkit-box-pack: stretch;
+  -webkit-justify-content: stretch;
+  -ms-flex-pack: stretch;
+  justify-content: stretch; }
 
-.air {
-  background: url(../assets/airPlants.jpg); }
+.categoryCard {
+  min-height: 260px;
+  background-size: contain;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center; }
+  .categoryCard:nth-of-type(1) {
+    background: url("../assets/airPlants.jpg") no-repeat center;
+    background-size: cover;
+    grid-row-end: span 2; }
+  .categoryCard:nth-of-type(2) {
+    background: url("../assets/officePlants.jpg") no-repeat center; }
+  .categoryCard:nth-of-type(3) {
+    background: url("../assets/housePlants.jpg") no-repeat center; }
+  .categoryCard:nth-of-type(4) {
+    background: url("../assets/plantContainers.jpg") no-repeat center;
+    grid-column-start: span 2; }
 
-.containers {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.5)), to(rgba(255, 255, 255, 0.5))), url("../assets/plantContainers.jpg");
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../assets/plantContainers.jpg");
-  background: -o-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../assets/plantContainers.jpg");
-  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../assets/plantContainers.jpg");
-  width: 200px;
-  height: 200px; }
+.popularItem {
+  position: relative; }
+
+.badge {
+  position: absolute;
+  right: 5px;
+  display: block; }
+
+.badge1 {
+  top: 5px; }
+
+.badge2 {
+  top: 30px; }
 
 /*----------------------------------------
-    Section - hero
+    Section - Popular Products
 ----------------------------------------*/
+.nav__section {
+  margin: 0 auto 40px;
+  display: block;
+  text-align: center; }
+
+.grid__popularProducts {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 20px; }
+
+.badge--hot {
+  background: #f07f84;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 400;
+  padding: 0.2rem 0.8rem;
+  display: inline;
+  border-radius: 15px;
+  min-width: 45px;
+  text-transform: uppercase;
+  text-align: center; }
+
+.badge--new {
+  background: #79dad6;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 400;
+  padding: 0.2rem 0.8rem;
+  display: inline;
+  border-radius: 15px;
+  min-width: 45px;
+  text-transform: uppercase;
+  text-align: center; }
+
+.badge--discount {
+  background: #f6b895;
+  font-size: 1rem;
+  color: #fff;
+  font-weight: 400;
+  padding: 0.2rem 0.8rem;
+  display: inline;
+  border-radius: 15px;
+  min-width: 45px;
+  text-transform: uppercase;
+  text-align: center; }
+
+.wrap--popularProductsItemDescription {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center;
+  padding: 20px; }
+
+/*----------------------------------------
+    Section - Testimonials
+----------------------------------------*/
+.layout__2col {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.layout__2col > div {
+  width: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center; }
+
+.testimonials__quote {
+  background: url("../assets/bg-testimonial.jpg"); }
+
+.wrap--testimonialsQuote {
+  padding-top: 40px;
+  padding-bottom: 40px; }
+
+.testimonials__video {
+  background-size: cover;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../assets/bg-video.jpg");
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../assets/bg-video.jpg"); }
+
+.graphic--playButton, .graphic--playButton div {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  color: #fff;
+  background: rgba(240, 127, 132, 0.5);
+  border-radius: 50%; }
+  .graphic--playButton div {
+    width: 65px;
+    height: 65px;
+    background: #f07f84; }
+  .graphic--playButton:hover div, .graphic--playButton div:hover div {
+    width: 100px;
+    height: 100px; }
+
+span.display--graphic::before {
+  content: url("../assets/graphics-plantsStore.png"); }
+
+/*----------------------------------------
+    Section - Blog
+----------------------------------------*/
+.blog {
+  clear: both; }
+
+.layout__3col {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.layout__3col > div {
+  width: 33%;
+  margin-right: 30px; }
+
+.layout__3col > div:last-child {
+  margin-right: 0; }
+
+.wrap--blogBlurb {
+  padding: 10px 0; }
+
+.blogBlurb > a {
+  line-height: 0; }
+
+/*----------------------------------------
+    Section - Newsletter
+----------------------------------------*/
+.newsletter {
+  padding-bottom: 80px;
+  border-bottom: 1px #f5efef solid; }
+
+.newsletter p {
+  text-align: center; }
+
+.form__newsletter {
+  width: 70%;
+  margin: 0 auto 100px;
+  position: relative; }
+
+.form__newsletter button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 5px 5px 0 5px; }
+
+.fa.fa-envelope {
+  color: white;
+  background: black;
+  padding: 0 1px;
+  font-size: 20px; }
+
+.input--border-bottom {
+  border: none;
+  border-bottom: #888890 1px solid;
+  font-size: 16px;
+  width: 100%; }
+
+.wrap--brandIcons {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  text-align: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.graphics--logo {
+  width: auto; }
+
+.layout__floatRow > * {
+  float: left;
+  margin-right: 10px; }
+  .layout__floatRow > *:last-child {
+    margin-right: 0; }
+
+.fa.icon--social {
+  font-size: 1.9rem;
+  color: #000;
+  font-weight: 400;
+  padding: 1rem; }
+
 button, input[type="submit"] {
   border: none;
   -webkit-box-shadow: none;
